# sm64

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  Makefile.split  README.md  extract_assets.py
.github/workflows/: validate.yml
actors/: common0.c  common0_geo.c  common1.c  common1_geo.c  group0.c  group0_geo.c  group1.c  group10.c  group10_geo.c  group11.c  group11_geo.c  group12.c  group12_geo.c  group13.c  group13_geo.c  group14.c  group14_geo.c  group15.c  group15_geo.c  group16.c  group16_geo.c  group17.c  group17_geo.c  group1_geo.c  group2.c  group2_geo.c  group3.c  group3_geo.c  group4.c  group4_geo.c  group5.c  group5_geo.c  group6.c  group6_geo.c  group7.c  group7_geo.c  group8.c  group8_geo.c  group9.c  group9_geo.c
data/: behavior_data.c
include/: config.h  gfx_dimensions.h  level_commands.h  macros.h  make_const_nonconst.h  sm64.h  textures.h  types.h  ultra64.h
include/PR/: R4300.h  gbi.h  gs2dex.h  gu.h  os.h  os_ai.h  os_cache.h  os_eeprom.h  os_exception.h  os_libc.h  os_message.h  os_misc.h  os_rdp.h  os_time.h  os_tlb.h  os_vi.h  rcp.h  ultratypes.h
include/libc/: stddef.h  string.h
levels/: entry.c  scripts.c
levels/bbh/: geo.c  leveldata.c  script.c
levels/bitdw/: geo.c  leveldata.c  script.c
levels/bitfs/: geo.c  leveldata.c  script.c
levels/bits/: geo.c  leveldata.c  script.c
levels/bob/: geo.c  leveldata.c  script.c
levels/bowser_1/: geo.c  leveldata.c  script.c
levels/bowser_2/: geo.c  leveldata.c  script.c
levels/bowser_3/: geo.c  leveldata.c  script.c
levels/castle_courtyard/: geo.c  leveldata.c  script.c
levels/castle_grounds/: geo.c  leveldata.c  script.c
levels/castle_inside/: geo.c  leveldata.c  script.c
levels/ccm/: geo.c  leveldata.c  script.c
levels/cotmc/: geo.c  leveldata.c  script.c
levels/ddd/: geo.c  leveldata.c  script.c
levels/ending/: geo.c  leveldata.c  script.c
levels/hmc/: geo.c  leveldata.c  script.c
levels/intro/: geo.c  leveldata.c  script.c
levels/jrb/: geo.c  leveldata.c  script.c
levels/lll/: geo.c  leveldata.c  script.c
levels/menu/: geo.c  leveldata.c  script.c
levels/pss/: geo.c  leveldata.c  script.c
levels/rr/: geo.c  leveldata.c  script.c
levels/sa/: geo.c  leveldata.c  script.c
levels/sl/: geo.c  leveldata.c  script.c
levels/ssl/: geo.c  leveldata.c  script.c
levels/thi/: geo.c  leveldata.c  script.c
levels/totwc/: geo.c  leveldata.c  script.c
levels/ttc/: geo.c  leveldata.c  script.c
levels/ttm/: geo.c  leveldata.c  script.c
levels/vcutm/: geo.c  leveldata.c  script.c
levels/wdw/: geo.c  leveldata.c  script.c
levels/wf/: geo.c  leveldata.c  script.c
levels/wmotr/: geo.c  leveldata.c  script.c
lib/src/: _Ldtob.c  __osDequeueThread.c  libultra_internal.h  osEepromWrite.c  osint.h
src/audio/: data.h  effects.h  external.c  external.h  heap.c  heap.h  internal.h  load.c  load.h  load_sh.c  playback.c  playback.h  port_eu.c  port_sh.c  seqplayer.c  seqplayer.h  synthesis.c  synthesis_sh.c
src/audio/copt/: seq_channel_layer_process_script_copt.inc.c
src/buffers/: buffers.h  framebuffers.h  gfx_output_buffer.h  zbuffer.h
src/engine/: behavior_script.h  geo_layout.h  graph_node.c  graph_node.h  graph_node_manager.c  level_script.c  level_script.h  math_util.c  math_util.h  surface_collision.c  surface_collision.h  surface_load.c  surface_load.h
src/game/: area.c  area.h  behavior_actions.c  camera.c  camera.h  debug.c  debug.h  envfx_bubbles.c  envfx_bubbles.h  envfx_snow.c  envfx_snow.h  game_init.c  game_init.h  geo_misc.c  geo_misc.h  hud.c  hud.h  ingame_menu.c  ingame_menu.h  interaction.c  interaction.h  level_geo.h  level_update.c  level_update.h  macro_special_objects.c  macro_special_objects.h  main.c  mario.c  mario.h  mario_actions_airborne.c  mario_actions_airborne.h  mario_actions_automatic.c  mario_actions_automatic.h  mario_actions_cutscene.c  mario_actions_cutscene.h  mario_actions_moving.c  mario_actions_moving.h  mario_actions_object.c  mario_actions_object.h  mario_actions_stationary.c  (+44 more)
src/game/behaviors/: bowling_ball.inc.c  bubble.inc.c  camera_lakitu.inc.c  chuckya.inc.c  manta_ray.inc.c  mips.inc.c  snowman.inc.c  water_objs.inc.c  wiggler.inc.c
src/goddard/: bad_declarations.h  debug_utils.c  debug_utils.h  draw_objects.c  draw_objects.h  dynlist_proc.c  dynlist_proc.h  gd_main.c  gd_main.h  gd_math.c  gd_math.h  gd_memory.c  gd_memory.h  joints.c  joints.h  objects.c  objects.h  old_menu.c  old_menu.h  particles.c  particles.h  renderer.c  renderer.h  sfx.c  sfx.h  shape_helper.c  shape_helper.h  skin.c  skin.h  skin_movement.c
src/goddard/dynlists/: anim_group_1.c  anim_group_2.c  anim_mario_eyebrows_1.c  anim_mario_lips_1.c  anim_mario_lips_2.c  anim_mario_mustache_left.c  anim_mario_mustache_right.c  dynlist_mario_face.c  dynlist_mario_master.c  dynlist_test_cube.c  dynlist_unused.c  dynlists_mario_eyebrows_mustache.c  dynlists_mario_eyes.c
src/menu/: file_select.c  file_select.h  intro_geo.c  intro_geo.h  star_select.c  star_select.h  title_screen.c  title_screen.h
src/pc/: pc_main.c  ultra_reimplementation.c
tools/: CMakeLists.txt  Makefile  aifc_decode.c  aiff_extract_codebook.c  conv2hex.py  determine-endian-bitwidth.py  disassemble_sound.py  extract_data_for_mio.c  n64graphics.c  skyconv.c  wrapinclude.py
tools/audiofile/: audiofile.cpp
tools/kysc/: Cargo.toml
tools/kysc/src/: coan.rs  fsu.rs  main.rs
tools/n64graphics_ci_dir/: n64graphics_ci.c
tools/sdk-tools/adpcm/: vadpcm.h
tools/sdk-tools/tabledesign/: tabledesign.c
